# midterm-exam-5

./: Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: github-actions.yml  learn-github-actions.yml
my_project/: main.py  my_complex.py  my_debug.py  my_utils.py
my_project/something/my_module3/: func.py
my_project/something/my_module31/: func.py
my_project/something/my_module84/: func.py
tests/: test_my_project_1.py  test_my_project_2.py  test_my_project_3.py
tests/resources/parent1/child2/: file1.txt
tests/resources/parent2/child10/: file66.json
tests/resources/parent8/child43/: file98.txt
