[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Bill <bill@timepercentcorp.com>"]
readme = "README.md"
packages = [{include = "my_project"}]

[tool.poetry.dependencies]
python = ">= 3.10,<12"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
